[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
  {name = "pmelo-cl", email = "pmelo-cl@42.fr"},
]
description = "Generador de laberintos aleatorios con algoritmo de backtracking"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/a-maze-ing"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]