[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
authors = [
  {name = "pmelo-cl"},
  {name = "vhedo-ga"}
]
description = "Generador de laberintos aleatorios con algoritmo de backtracking"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
